--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-modal": "^3.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "typescript": "^5.7.3",
@@ -37,6 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
