--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.28.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.102",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "mapbox-gl": "^3.10.0",
     "prettier": "^3.5.2",
     "react": "^18.3.1",
