--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.28.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^16.18.102",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.10.0",
     "prettier": "^3.5.2",
     "react": "^18.3.1",
