--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^6.4.7",
+    "@mui/material": "^7.0.2",
     "@mui/x-charts": "^7.28.0",
+    "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@types/lodash": "^4.17.16",
     "@types/node": "^16.18.102",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.10.0",
     "prettier": "^3.5.2",
